Code Clean up part 2
Added 2 new attributes:
- Draw time: decreases the cooldown of the item you switched to
- First hit damage multiplier: increases the damage of the first instance of hit or aoe hit